hphp/test/zend/bad/ext/standard/tests/file/rename_variation6-win32.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') die('skip..  for Windows');
if (!function_exists("symlink")) die("skip symlinks are not supported");
$ret = exec('mklink rename_variation13tmp.lnk ' . __FILE__ .' 2>&1', $out);
if (strpos($ret, 'privilege')) {
	die('skip. SeCreateSymbolicLinkPrivilege not enable for this user.');
}
?>